--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>Blog</h1>
-    <a href="index.html">Volver</a>
+    <nav class="navegacion">
+       <a href="index.html">Volver</a>  
+    </nav>
 </body>
 </html>
