--- a/nosotros.html
+++ b/nosotros.html
@@ -10,7 +10,10 @@
 <body>
     
     <h1>Nosotros</h1>
-    <a href="index.html">Volver</a>
+    <nav class="navegacion">
+       <a href="index.html">Volver</a>  
+    </nav>
+   
 
 </body>
 </html>
