--- a/contacto.html
+++ b/contacto.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Contacto</h1>
-    <a href="index.html">Volver</a>
+    <nav class="navegacion">
+       <a href="index.html">Volver</a>  
+    </nav>
+    
 </body>
 </html>
